--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -7,6 +7,15 @@
     "minPassword": "Минимум 6 символов",
     "equalPassword": "Пароли не совпадают"
   },
+  "toast": {
+    "created": "Канал создан",
+    "renaming": "Канал переименован",
+    "removing": "Канал удален"
+  },
+  "errors": {
+    "network": "Ошибка сети. Проверьте соединение.",
+    "unknown": "Что-то пошло не так"
+  },
   "channels": {
     "unique": "Имя канала должно быть уникальным",
     "createChannel": "Создать канал",
