--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -10,7 +10,9 @@
   "toast": {
     "created": "Канал создан",
     "renaming": "Канал переименован",
-    "removing": "Канал удален"
+    "removing": "Канал удален",
+    "profanityCleaned": "Сообщение отфильтровано",
+    "profanity": "Некорректное имя канала"
   },
   "errors": {
     "network": "Ошибка сети. Проверьте соединение.",
