--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -16,7 +16,8 @@
   },
   "errors": {
     "network": "Ошибка сети. Проверьте соединение.",
-    "unknown": "Что-то пошло не так"
+    "unknown": "Что-то пошло не так",
+    "profanity": "Некорректное имя канала"
   },
   "channels": {
     "unique": "Имя канала должно быть уникальным",
