--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -4,26 +4,28 @@
     "minSymbols": "Минимум 3 символа",
     "maxSymbols": "Максимум 20 символов",
     "required": "Обязательно",
-    "minPassword": "Минимум 6 символов",
+    "minPassword": "Не менее 6 символов",
     "equalPassword": "Пароли не совпадают"
   },
   "toast": {
     "created": "Канал создан",
     "renaming": "Канал переименован",
-    "removing": "Канал удален",
+    "removing": "Канал удалён",
     "profanityCleaned": "Сообщение отфильтровано",
     "profanity": "Некорректное имя канала"
   },
   "errors": {
-    "network": "Ошибка сети. Проверьте соединение.",
+    "network": "Ошибка соединения",
     "unknown": "Что-то пошло не так",
     "profanity": "Некорректное имя канала"
   },
   "channels": {
+    "channelName": "Имя канала",
+    "manageChannel": "Управление каналом",
     "unique": "Имя канала должно быть уникальным",
     "createChannel": "Создать канал",
     "reject": "Отменить",
-    "edit": "Редактировать",
+    "edit": "Переименовать",
     "delete": "Удалить",
     "deleteChannel": "Удалить канал",
     "changeName": "Изменить имя канала",
@@ -34,14 +36,16 @@
     "send": "Отправить"
   },
   "login": {
-    "name": "Имя",
+    "nickname": "Ваш ник",
+    "name": "Имя пользователя",
     "password": "Пароль",
+    "noAccount": "Нет аккаунта?",
     "enter": "Войти",
     "registration": "Зарегистрироваться",
     "confirmPassword": "Подтвердить пароль",
-    "equalPassword": "Пароли не совпадают",
+    "equalPassword": "Пароли должны совпадать",
     "nameTaken": "Имя уже занято",
-    "invalidCreds": "Неверное имя пользователя или пароль",
+    "invalidCreds": "Неверные имя пользователя или пароль",
     "invalidPath": "Некорректный путь, перейдите в"
   },
   "app": {
