--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -41,7 +41,7 @@
     "password": "Пароль",
     "noAccount": "Нет аккаунта?",
     "enter": "Войти",
-    "registration": "Зарегистрироваться",
+    "registration": "Регистрация",
     "confirmPassword": "Подтвердить пароль",
     "equalPassword": "Пароли должны совпадать",
     "nameTaken": "Имя уже занято",
