--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -1,8 +1,7 @@
 {
   "chatName": "Hexlet chat",
   "form": {
-    "minSymbols": "От 3 до 20 символов",
-    "maxSymbols": "От 3 до 20 символов",
+    "symbolsRange": "От 3 до 20 символов",
     "required": "Обязательно",
     "minPassword": "Не менее 6 символов",
     "equalPassword": "Пароли не совпадают"
