--- a/frontend/src/locales/ru.json
+++ b/frontend/src/locales/ru.json
@@ -32,7 +32,8 @@
     "typeNewNameChannel": "Напишите новое имя канала",
     "menu": "Список каналов",
     "typeMessage": "Напишите новое сообщение",
-    "send": "Отправить"
+    "send": "Отправить",
+    "newMessage": "Новое сообщение"
   },
   "login": {
     "nickname": "Ваш ник",
